# RandomWalk_NMR

./: .dockerignore  .gitignore  Dockerfile  README.md  install_rwnmr.sh  rwnmr_install.sh
config/: cpmg.config  cpmg2.config  ga.config  pfgse.config  rwnmr.config  uct.config  umct.config
config/default/: cpmg.config  ga.config  multitau.config  pfgse.config  rwnmr.config  uct.config
config/imgs/: ImagesList.txt
db/: doc_notes
db/input_data/AC1_1um_3D/: NMR_Histogram.txt  NMR_HistogramEvolution.txt  NMR_T2.txt  NMR_decay.txt
db/input_data/PSO_benchmark_2D/: NMR_T2.txt  NMR_collisions.txt  NMR_decay.txt
db/input_data/tiny_3D/: NMR_T2.txt  NMR_collisions.txt  NMR_decay.txt  rho_ref.txt
db/input_data/tiny_3D_v2/: NMR_T2.txt  NMR_collisions.txt  NMR_decay.txt
python/autorun/: run_rwnmr_pfgse_from_inputdir.py
python/datavis/: NMR_PlotProperties.py  NMR_Plots.py  NMR_ReadFromFile.py  NMR_walker.py  merge_rwnmr_data.py  plot_Dt_from_analytical.py  plot_Dts_bergman.py  plot_Dts_bergman_with_shifts.py  plot_bergman_comparison_Dt_resolutions.py  plot_callaghan.py  plot_functions.py  plot_pore_size_estimation.py  plot_rw_diffusion_coefficient_methods.py  plot_walkers_displacement.py  porosity.py  rwnmr_pfgse_processor.py  visualize_collision_histogram.py  visualize_cpmg.py  visualize_multitau.py  visualize_multple_data.py  visualize_pfgse.py
python/datavis/old_plots/: plot_Dii.py  plot_Dt_real.py  plot_Dts.py  plot_Dts_bergman.py  plot_Mkt.py  plot_analytical_vs_rwsims.py  plot_analytical_vs_simulation.py  plot_bergman.py  plot_bergman_comparison.py  plot_pfgse.py  plot_pfgse_adjust.py  plot_pfgse_isolated_sphere.py  plot_pfgse_resolution_tests.py  plot_sorland_Dt.py  plot_t2.py  subplot_Dts_bergman.py  subplot_Dts_bergman_with_shift.py  subplot_Mkt.py
python/datavis_2.0/: LeastSquaresRegression.py  NMR_ReadFromFile.py  NMR_data.py  plot_Dt.py  plot_Dt_with_shifts.py  plot_rw_diffusion_coefficient_methods.py  plot_walkers_map.py  plot_walkers_placement.py  rwnmr_pfgse_processor.py  scatterplot_3d.py
python/datavis_2.0/old_plots/: plot_bergman_comparison_Dt.py  plot_decay.py  plot_rho.py
python/utils/: generate_chfem_input_files.py
requirements/: rwnmr_requirements_installation_guide.txt
requirements/ubuntu_installation/: install_rwnmr_requirements_ubuntu.sh  readme.txt
requirements/ubuntu_installation/cmake/: install_cmake.sh
requirements/ubuntu_installation/cuda/: cuda.sh  install_cuda.sh
requirements/ubuntu_installation/eigen/: install_eigen3.sh
requirements/ubuntu_installation/mpi/: install_mpi.sh
requirements/ubuntu_installation/opencv/: install_mpi.sh
src/: CMakeLists.txt  NMR_RWConfig.h.in  main.cpp  procedures_and_routines.cpp
src/App/: App.h
src/BitBlock/: CMakeLists.txt  bitBlock.cpp
src/ConfigFiles/: CMakeLists.txt  cpmg_config.cpp  cpmg_config.h  ga_config.cpp  ga_config.h  pfgse_config.cpp  pfgse_config.h  rwnmr_config.cpp  rwnmr_config.h  uct_config.cpp  uct_config.h
src/ConsoleInput/: CMakeLists.txt  consoleInput.cpp  consoleInput.h
src/FileHandler/: baseFunctions.cpp  fileHandler.cpp  smallFunctions.cpp
src/GA/: CMakeLists.txt  ga_core.h  ga_defs.h  ga_output.h  ga_parameters.h  ga_problem.h  individual.cpp  individual.h  mpi_ga_island.h  population.h
src/GA/ParticleSwarm_deprecated/: CMakeLists.txt  PSO.h
src/Laplace/: tikhonov.h
src/Laplace/include/: NNLS.hpp  TikhonovSolver.h
src/Laplace/src/: TikhonovSolver.cpp  nmrinv_core.cpp
src/Math/: CMakeLists.txt  LeastSquareAdjust.cpp  LeastSquareAdjust.h  Vector3D.cpp  Vector3D.h
src/NMR_Simulation/: CMakeLists.txt  CollisionHistogram.h  NMR_CUDA_2D.cpp  NMR_CUDA_3D.cpp  NMR_Network.cpp  NMR_Network.h  NMR_Simulation.cpp  NMR_Simulation.h  NMR_cpmg.cpp  NMR_cpmg.h  NMR_cudaUtils_2D.h  NMR_cudaUtils_3D.h  NMR_defs.h  NMR_output.cpp  NMR_pfgse.cpp  NMR_pfgse.h  NMR_pfgse_cuda.cpp  NMR_pfgse_cuda.h  NMR_setup.cpp  NMR_simulations.cpp
src/RNG/: CMakeLists.txt  myRNG.h  rng.h  xorshift.cpp  xorshift.h
src/Utils/: CMakeLists.txt  ImagePath.cpp  ImagePath.h
src/Walker/: walker.cpp  walker.h  walker_defs.h
src/backend/: CMakeLists.txt  NMR_RWConfig.h.in  RWNMR_Config.h.in  main.cpp
src/backend/App/: App.cpp  App.h  CMakeLists.txt  rwnmrApp.cpp  rwnmrApp.h
src/backend/BitBlock/: CMakeLists.txt  bitBlock.cpp  bitBlock.h
src/backend/ConfigFiles/: CMakeLists.txt  configFiles_defs.h  cpmg_config.cpp  cpmg_config.h  ga_config.cpp  ga_config.h  multitau_config.cpp  multitau_config.h  pfgse_config.cpp  pfgse_config.h  rwnmr_config.cpp  rwnmr_config.h  uct_config.cpp  uct_config.h
src/backend/FileHandler/: CMakeLists.txt  fileHandler.cpp  fileHandler.h
src/backend/GA/: CMakeLists.txt  ga_core.cpp  mpi_ga_island.cpp
src/backend/GA/ParticleSwarm_deprecated/: PSO.cpp  appPSO.cpp  basic.cpp
src/backend/Laplace/: CMakeLists.txt  tikhonov.cpp
src/backend/Laplace/include/: nmrinv.h  nmrinv_core.h  vector_funcs.h
src/backend/Laplace/src/: nmrinv.cpp  nmrinv_core.cpp  vector_funcs.cpp
src/backend/Math/: CMakeLists.txt  LeastSquareAdjust.cpp  LeastSquareAdjust.h
src/backend/NMR_Simulation/: CMakeLists.txt  ChordLengthHistogram.cpp  ChordLengthHistogram.h  CollisionHistogram.cpp  CollisionHistogram.h  InternalField.cpp  InternalField.h  NMR_Simulation.cpp  NMR_Simulation.h  NMR_Simulation_cuda.cpp  NMR_Simulation_cuda.h  NMR_cpmg.cpp  NMR_cpmg.h  NMR_cpmg_cuda.cpp  NMR_cpmg_cuda.h  NMR_multitau.cpp  NMR_multitau.h  NMR_pfgse.cpp  NMR_pfgse.h  NMR_pfgse_cuda.cpp  NMR_pfgse_cuda.h
src/backend/NMR_Simulation/cuda_check/: check_cuda.cu  cuda_script
src/backend/RNG/: CMakeLists.txt  myRNG.h  randomIndex.h
src/backend/Utils/: ArgsParser.cpp  ArgsParser.h  CMakeLists.txt  OMPLoopEnabler.cpp  OMPLoopEnabler.h  ProgressBar.h  myAllocator.cpp  myAllocator.h
src/backend/Walker/: CMakeLists.txt  walker.cpp  walker.h
src/frontend/: app_rwnmr.py  configfile_screen.py  image_viewer.py  main.py  setup_screen.py  setup_tab.py
